tests/should-fail/flags/overflowing-oct-literal.j
//# +checknumberliterals
function test takes nothing returns nothing
    local integer x = 0500000000000
endfunction


